[gd_scene load_steps=5 format=3 uid="uid://chjnbhobfbja1"]

[ext_resource type="Texture2D" uid="uid://dirs46eyshuwd" path="res://UI/UI_Square.png" id="1_r3o0j"]
[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_rxktq"]
[ext_resource type="FontFile" uid="uid://bjywvy1mvhk3r" path="res://Font/Kenney Future Narrow.ttf" id="2_ysu1u"]

[sub_resource type="LabelSettings" id="LabelSettings_qei76"]
font = ExtResource("2_ysu1u")
font_size = 32
outline_color = Color(0.113725, 0.113725, 0.113725, 1)
shadow_color = Color(0.113725, 0.113725, 0.113725, 0.784314)
shadow_offset = Vector2(-1, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rxktq")

[node name="HealthBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -57.0
offset_right = 225.0
offset_bottom = -25.0
grow_vertical = 0
value = 60.0
nine_patch_stretch = true
texture_under = ExtResource("1_r3o0j")
texture_progress = ExtResource("1_r3o0j")
tint_under = Color(0.113725, 0.113725, 0.113725, 0.745098)
tint_progress = Color(1, 0.124572, 0.0864938, 0.745098)

[node name="AmmoText" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -108.0
offset_right = 225.0
offset_bottom = -58.0
grow_vertical = 0
text = "Ammo: 10"
label_settings = SubResource("LabelSettings_qei76")
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -160.0
offset_right = 225.0
offset_bottom = -110.0
grow_vertical = 0
text = "Score: 0"
label_settings = SubResource("LabelSettings_qei76")
vertical_alignment = 1
